# AGILE-WM

./: .gitignore  CLIP_finetune.py  README.md  caption_shard.py  captioner.py  collect_rollouts.py  env.py  extract_frames.py  framify_one_rollout.py  fusion_reconstruction_experiment.py  plot_reconstruction_losses.ipynb  predict_rnn_next_frame.py  pyproject.toml  rnn_train.py  rollout_video.ipynb  run_caption_array.sh  run_clip_finetune.sh  run_rnn_train_mila.sh  sample_random_caption_pairs.ipynb  series.py  shards.txt  visualize_shards.ipynb
agile_wm/: __init__.py  paths.py  runtime.py
artifacts/: README.md
configs/: carracing.config
logs/: clip_ft_9245201.err  clip_ft_9245426.err  clip_ft_9245448.err  clip_ft_9245505.err  clip_ft_9245543.err  clip_ft_9246772.err  clip_ft_9268579.err  clip_ft_9269080.err  qwen_cap_9240586_0.err  qwen_cap_9240860_1.err  qwen_cap_9240942_1.err  qwen_cap_9240942_2.err  qwen_cap_9241008_1.err  qwen_cap_9241008_2.err  qwen_cap_9241088_1.err  qwen_cap_9241088_10.err  qwen_cap_9241088_11.err  qwen_cap_9241088_12.err  qwen_cap_9241088_13.err  qwen_cap_9241088_14.err  qwen_cap_9241088_15.err  qwen_cap_9241088_16.err  qwen_cap_9241088_17.err  qwen_cap_9241088_18.err  qwen_cap_9241088_19.err  qwen_cap_9241088_2.err  qwen_cap_9241088_3.err  qwen_cap_9241088_4.err  qwen_cap_9241088_5.err  qwen_cap_9241088_6.err  qwen_cap_9241088_7.err  qwen_cap_9241088_8.err  qwen_cap_9241088_9.err  qwen_cap_9259091_20.err  qwen_cap_9259465_20.err  qwen_cap_9261838_19.err  qwen_cap_9262148_19.err  qwen_cap_9263095_20.err  qwen_cap_9263207_20.err  (+25 more)
rnn/: rnn.py
(+98 files in other folders)
