[project]
name = "agile-wm"
version = "0.1.0"
description = "AGILE-WM captioning and data processing utilities"
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "numpy",
    "peft",
    "pillow",
    "tensorboard",
    "tensorflow==2.18.1",
    "tensorflow-probability==0.25.0",
    "tf-keras==2.18.0",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm",
    "transformers",
    "webdataset",
]
